[package]
name = "an-zipper"
version = "0.1.0"
authors = ["Eliza Weisman <hi@hawkweisman.me>"]

[features]
# no features by default
default = []
# if building against unstable Rust
unstable = []

[dependencies.unstable-macros]
git = "https://github.com/hawkw/unstable-macros.git"

[dev-dependencies]
quickcheck = "0.3"

[dependencies.clippy]
version = "*"
optional = true
